--- a/src/app/campaigns/components/campaigns-list-item/campaigns-list-item.component.scss
+++ b/src/app/campaigns/components/campaigns-list-item/campaigns-list-item.component.scss
@@ -200,7 +200,8 @@
   width: 100%;
   // height: 100%;
   // width: 348.13px;
-  height: 198.5px;
+  height: 100%;
+  object-fit: cover;
 }
 
 .text-delete {
@@ -615,10 +616,8 @@
   color: #4080ff;
 }
 
-@media (max-width: 767.98px){
-  .modal-roi{
-    background: #FFFFFF;
-
+@media (max-width: 767.98px) {
+  .modal-roi {
+    background: #ffffff;
   }
-
 }
